[tool.poetry]
name = "aon"
version = "1.0.0"
description = "Interact with the AON (Andrezao Object Notation) file format"
authors = ["Pablo <pablohuggem@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Tomcat-42/aon"
documentation = "https://github.com/Tomcat-42/aon"
repository = "https://github.com/Tomcat-42/aon"
keywords = ["text file", "file format", "aon", "andrezao object notation", "serialization", "deserialization"]
build = "build.py"
packages = [
    { include = "aon", format = "wheel"},
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"
pytest-cov = "^2.10.0"
pytest-mock = "*"

[tool.poetry.group.docs.dependencies]
sphinx = "^3.0.0"
sphinx-rtd-theme = "^0.4.3"


[build-system]
requires = ["setuptools>=42", "wheel", "cmake>=3.16", "pybind11-stubgen @ git+https://github.com/HaarigerHarald/pybind11-stubgen#egg=pybind11-stubgen"]
build-backend = "setuptools.build_meta"
